# STM32RTC

./: CMakeLists.txt  README.md  keywords.txt  library.json  library.properties
.github/workflows/: CodeSpell.yml  Continuous-Integration.yml
examples/Epoch/: Epoch.ino
examples/F1RTCDateRetention/: F1RTCDateRetention.ino
examples/RTCClockSelection/: RTCClockSelection.ino
examples/RTCReset/: RTCReset.ino
examples/RTC_Alarm_A_B/: RTC_Alarm_A_B.ino
examples/RTC_Seconds/: RTC_Seconds.ino
examples/SimpleRTC/: SimpleRTC.ino
examples/advancedRTCAlarm/: advancedRTCAlarm.ino
examples/bin_onlyRTCAlarm/: bin_onlyRTCAlarm.ino
examples/changeMode/: changeMode.ino
examples/mixRTCAlarm/: mixRTCAlarm.ino
examples/simpleRTCAlarm/: simpleRTCAlarm.ino
extras/: .codespellignore  rtc_cores_config.json
src/: STM32RTC.c  STM32RTC.cpp  STM32RTC.h  STM32RTC.hpp  STM32RTCMbed.cpp  STM32RTCMbed.h  clock.c  rtc.c  rtc.h  stm32_def.h
